clang/test/BSC/Negative/Ownership/Owned/generic_with_owned_args1/generic_with_owned_args1.cbs
// RUN: %clang_cc1 -ast-dump -verify %s


// issue I8M1X8 testcase

int a = 0;

_Owned int* Func_1<T>() // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
{
    T tmp = (_Owned int*)a; // expected-warning {{cast to '_Owned int *' from smaller integer type 'int'}} [-Wincompatible-pointer-types-discards-qualifiers] expected-warning {{cast to '_Owned int *' from smaller integer type 'int'}} [-Wincompatible-pointer-types-discards-qualifiers]
    return tmp;
}

int main()
{
    _Owned int* res = Func_1<_Owned int*>(); // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-note {{in instantiation of function template specialization 'Func_1<_Owned int *>' requested here}}

    if (*res != 0) {
        return 1;
    }
    return 0;
}
